ARM: bcm2708: create a copy of bcm2835-i2s for compatiblity
To allow both kms and non kms device tree set-ups to work
with i2s-audio we need to separate the driver for the (soon)
legacy non-kms setups.

To ease the migration we keep both versions of the driver,
where the main driver will in the future support the clock
framework while the copy will continue to work with the
self-made clockmanager (which does not work when using
kms, as this requires the clock framework to be enabled).

The legacy driver now responds to the compatiblity string
"brcm,bcm2835-i2s-noclock", which is at this moment made the default
in the device-tree. the vc4-kms-v3d overlay will change the
compatiblity.

When the clock framework is enabled by default then these changes
can easily get reverted and the legacy(noclock) driver removed.

Signed-off-by: Martin Sperl <kernel@martin.sperl.org>

--- a/sound/soc/bcm/Makefile
+++ b/sound/soc/bcm/Makefile
@@ -25,3 +25,8 @@ obj-$(CONFIG_SND_BCM2708_SOC_RPI_DAC) += snd-soc-rpi-dac.o
 obj-$(CONFIG_SND_BCM2708_SOC_RPI_PROTO) += snd-soc-rpi-proto.o
 obj-$(CONFIG_SND_BCM2708_SOC_IQAUDIO_DAC) += snd-soc-iqaudio-dac.o
 obj-$(CONFIG_SND_BCM2708_SOC_RASPIDAC3) += snd-soc-raspidac3.o
+
+# BCM2835 Platform Support without clock support
+snd-soc-bcm2835-i2s-noclock-objs := bcm2835-i2s-noclock.o
+
+obj-$(CONFIG_SND_BCM2835_SOC_I2S) += snd-soc-bcm2835-i2s-noclock.o
