--- a/arch/arm/boot/dts/bcm2708_common.dtsi
+++ b/arch/arm/boot/dts/bcm2708_common.dtsi
@@ -166,7 +166,7 @@
 		};
 
 		i2s: i2s@7e203000 {
-			compatible = "brcm,bcm2835-i2s";
+			compatible = "brcm,bcm2835-i2s-noclock";
 			reg = <0x7e203000 0x24>,
 			      <0x7e101098 0x08>;
 
