ARM: bcm2708: when using the vc4-kms then use the upstream driver
When using the vc4-kms-v3d dt-overlay then also use the upstream
i2s driver that uses the clock framework

Signed-off-by: Martin Sperl <kernel@martin.sperl.org>

--- a/arch/arm/boot/dts/overlays/vc4-kms-v3d-overlay.dts
+++ b/arch/arm/boot/dts/overlays/vc4-kms-v3d-overlay.dts
@@ -101,4 +101,11 @@
 			brcm,dma-channel-mask = <0x7f35>;
 		};
 	};
+
+	fragment@6 {
+		target = <&i2s>;
+		__overlay__ {
+			compatible = "brcm,bcm2835-i2s";
+		};
+	};
 };
