--- a/arch/arm/boot/dts/bcm2708_common.dtsi
+++ b/arch/arm/boot/dts/bcm2708_common.dtsi
@@ -1,3 +1,4 @@
+#include <dt-bindings/clock/bcm2835.h>
 #include <dt-bindings/clock/bcm2835-aux.h>
 #include "skeleton.dtsi"
 
@@ -169,6 +170,7 @@
 			compatible = "brcm,bcm2835-i2s-noclock";
 			reg = <0x7e203000 0x24>,
 			      <0x7e101098 0x08>;
+			clocks = <&cprman BCM2835_CLOCK_PCM>;
 
 			dmas = <&dma 2>, <&dma 3>;
 			dma-names = "tx", "rx";
