ARM: bcm2835: select OSC and PLLC_PER as PCM parent clocks
Define OSC and PLLC_PER as the only parent clocks
used by the PCM clock.

Signed-off-by: Martin Sperl <kernel@martin.sperl.org>

--- a/arch/arm/boot/dts/bcm2708_common.dtsi
+++ b/arch/arm/boot/dts/bcm2708_common.dtsi
@@ -89,6 +89,8 @@
 			 * oscillator.
 			 */
 			clocks = <&clk_osc>;
+			brcm,clock-flags = <((1 << BCM2835_PER_PARENT_OSC) | (1 << BCM2835_PER_PARENT_PLLD_PER))>;
+			brcm,clock-index = <BCM2835_CLOCK_PCM>;
 		};
 
 		random: rng@7e104000 {
