--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -77,6 +77,10 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	mcp23s17.dtbo \
 	mcp2515-can0.dtbo \
 	mcp2515-can1.dtbo \
+	mcp2517fd-can0.dtbo \
+	mcp2517fd-can1.dtbo \
+	mcp2517fd-can2-spi1_0.dtbo \
+	mcp2517fd-can3-spi2_0.dtbo \
 	mcp3008.dtbo \
 	mcp3202.dtbo \
 	mcp342x.dtbo \
